--- a/TrainingAndMetrics.ipynb
+++ b/TrainingAndMetrics.ipynb
@@ -155,7 +155,8 @@
     "    \n",
     "    #fig.patch.set_facecolor('white')\n",
     "    plt.tight_layout()\n",
-    "    fig.savefig(f'confusion_matrix_{clf_name}_{data_choice}_{vect_choice}.png')    \n",
+    "    fig.savefig(f'confusion_matrix_{clf_name}_{data_choice}_{vect_choice}.png')   \n",
+    "    print(f'Saved to confusion_matrix_{clf_name}_{data_choice}_{vect_choice}.png')\n",
     "    \n",
     "    \n",
     "    return results"
@@ -215,6 +216,7 @@
     "    \n",
     "    \n",
     "    fig.savefig(f'learning_curve_{clf_name}_{data_choice}_{vect_choice}.png')\n",
+    "    print(f'Saved to learning_curve_{clf_name}_{data_choice}_{vect_choice}.png')\n",
     "    plt.show()"
    ]
   },
@@ -325,6 +327,7 @@
     "    \n",
     "    #fig.patch.set_facecolor('white')\n",
     "    fig.savefig(f'{score_type}_scores_comparison_{data_choice}_{vect_choice}.png')\n",
+    "    print(f'Saved to {score_type}_scores_comparison_{data_choice}_{vect_choice}.png')\n",
     "    fig.tight_layout()\n",
     "    plt.show()"
    ]
