--- a/TrainingAndMetrics.ipynb
+++ b/TrainingAndMetrics.ipynb
@@ -1016,7 +1016,10 @@
    "execution_count": null,
    "id": "d0b1f14b",
    "metadata": {
-    "scrolled": false
+    "scrolled": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -1038,7 +1041,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ab4659a8",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "df_results.head(10)"
